Added Custom imageviews and Dynamic data inclusion
Added Custom imageviews and Dynamic data inclusion

--- a/ProfileView/headerView.xib
+++ b/ProfileView/headerView.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,16 +16,31 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jMM-KL-zJ3">
-                    <rect key="frame" x="226.5" y="36" width="121.5" height="396"/>
+                    <rect key="frame" x="250.5" y="36" width="97.5" height="324"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="N30-zD-I5S">
-                            <rect key="frame" x="0.0" y="0.0" width="121.5" height="121.5"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="N30-zD-I5S" customClass="ProfileImageView" customModule="ProfileView" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="97.5" height="97.5"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageIndex">
+                                    <integer key="value" value="2"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="HMw-iD-cea" userLabel="image2">
-                            <rect key="frame" x="0.0" y="137.5" width="121.5" height="121"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="HMw-iD-cea" userLabel="image2" customClass="ProfileImageView" customModule="ProfileView" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="113.5" width="97.5" height="97"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageIndex">
+                                    <integer key="value" value="3"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="Ivo-gt-U1K" userLabel="image3">
-                            <rect key="frame" x="0.0" y="274.5" width="121.5" height="121.5"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="Ivo-gt-U1K" userLabel="image3" customClass="ProfileImageView" customModule="ProfileView" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="226.5" width="97.5" height="97.5"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageIndex">
+                                    <integer key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
                     </subviews>
                     <constraints>
@@ -33,18 +48,33 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Ojk-08-KfM">
-                    <rect key="frame" x="16" y="310.5" width="194.5" height="121.5"/>
+                    <rect key="frame" x="16" y="262.5" width="218.5" height="97.5"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="J60-1X-qIG" userLabel="image11">
-                            <rect key="frame" x="0.0" y="0.0" width="89.5" height="121.5"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="J60-1X-qIG" userLabel="image11" customClass="ProfileImageView" customModule="ProfileView" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="101.5" height="97.5"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageIndex">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="3DX-sU-PSK" userLabel="image12">
-                            <rect key="frame" x="105.5" y="0.0" width="89" height="121.5"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="3DX-sU-PSK" userLabel="image12" customClass="ProfileImageView" customModule="ProfileView" customModuleProvider="target">
+                            <rect key="frame" x="117.5" y="0.0" width="101" height="97.5"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageIndex">
+                                    <integer key="value" value="6"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
                     </subviews>
                 </stackView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image2" translatesAutoresizingMaskIntoConstraints="NO" id="ozR-51-TXR">
-                    <rect key="frame" x="16" y="36" width="194.5" height="258.5"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image2" translatesAutoresizingMaskIntoConstraints="NO" id="ozR-51-TXR" customClass="ProfileImageView" customModule="ProfileView" customModuleProvider="target">
+                    <rect key="frame" x="16" y="36" width="218.5" height="210.5"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="imageIndex">
+                            <integer key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </imageView>
             </subviews>
             <constraints>
@@ -55,7 +85,7 @@
                 <constraint firstItem="ozR-51-TXR" firstAttribute="leading" secondItem="kFp-qJ-cB0" secondAttribute="leading" constant="16" id="Cap-Ul-fpy"/>
                 <constraint firstAttribute="trailing" secondItem="jMM-KL-zJ3" secondAttribute="trailing" constant="16" id="NLW-ai-omU"/>
                 <constraint firstItem="Ojk-08-KfM" firstAttribute="top" secondItem="Ivo-gt-U1K" secondAttribute="top" id="P72-WW-Wwj"/>
-                <constraint firstItem="jMM-KL-zJ3" firstAttribute="width" secondItem="COj-LH-HAr" secondAttribute="width" multiplier="1/3" id="V1e-7H-Ay5"/>
+                <constraint firstItem="jMM-KL-zJ3" firstAttribute="width" secondItem="COj-LH-HAr" secondAttribute="width" multiplier="1/3" constant="-24" id="V1e-7H-Ay5"/>
                 <constraint firstItem="kFp-qJ-cB0" firstAttribute="trailing" secondItem="jMM-KL-zJ3" secondAttribute="trailing" constant="16" id="WX1-xg-Qft"/>
                 <constraint firstItem="Ojk-08-KfM" firstAttribute="height" secondItem="Ivo-gt-U1K" secondAttribute="height" id="eHT-jX-a9K"/>
                 <constraint firstItem="Ojk-08-KfM" firstAttribute="top" secondItem="ozR-51-TXR" secondAttribute="bottom" constant="16" id="jHG-zd-49b"/>
